--- a/less/header.less
+++ b/less/header.less
@@ -8,39 +8,63 @@
 .header {
     background-image: linear-gradient(white, rgb(231, 134, 240));
     display: flex;
-    justify-content: space-between;
-    h1 {
-        font-size: 9rem;
-    }
-    span {
-        font-size: 3rem;
-    }
-    h5{
-        font-size: 5rem;
-    }
-    .nav {
-        width: 15%;
-    a {
+    justify-content: space-between
+    
+    
+}
+
+.header-info {
+    display: flex;
+    flex-direction: column;
+    .centerflex();
+h1 {
+    font-size: 7rem;
+    display: flex;
+    
+}
+span {
+    font-size: 2rem;
+    justify-content: center;
+    align-items: center;
+    
+}
+h5{
+    margin-left: 10px;
+    font-size: 2rem;
+}
+}
+
+
+.mypic{
+    width:30%;
+    margin-left: 180px;
+    img {
         .colormix1();
-        display: flex;
-        .centerflex();
-        text-decoration: none;
-        display: flex;
-        font-size: 3rem;
-        padding: 9.8px 0;
-        span {
-            color: black;
-        }
-    }
-}
-     
-    .nav a span:hover {
-        color: #BC58F4;
+        margin-top: 40px;
+        max-width: 50%;
+        height: auto;
     }
 }
 
-
-
+.nav {
+    width: 15%;
+a {
+    .colormix1();
+    display: flex;
+    .centerflex();
+    text-decoration: none;
+    display: flex;
+    font-size: 3rem;
+    padding: 9.8px 0;
+    span {
+        color: black;
+    }
+}
+}
+ 
+.nav a span:hover {
+    color: #BC58F4;
+}
 
 
 
