--- a/less/container.less
+++ b/less/container.less
@@ -1,5 +1,6 @@
 .conatiner{
-    max-width: 95%;
+    font-family: 'Libre Baskerville', serif;
+    max-width: 75%;
     margin:0 auto;
     box-shadow: 2px 5px 20px;
     color: #BC58F4;
