--- a/less/contact.less
+++ b/less/contact.less
@@ -1,7 +1,9 @@
 //contact
 
 .contact {
-    .middle-cards(linear-gradient(white, rgb(231, 134, 240))); 
+    .middle-cards(linear-gradient(white, rgb(224, 184, 228))); 
+    box-shadow: 2px 5px 20px;
+    color: #b7a8c0;
     display: flex;
     flex-direction: column;
     align-items: center;
