--- a/less/container.less
+++ b/less/container.less
@@ -3,6 +3,6 @@
     max-width: 75%;
     margin:0 auto;
     box-shadow: 2px 5px 20px;
-    color: #BC58F4;
+    color: rgb(230, 235, 162);
     margin-top: 30px;
 }
