--- a/less/education.less
+++ b/less/education.less
@@ -1,15 +1,18 @@
 //education
 .education-section{
-    .middle-cards(linear-gradient(rgb(231, 134, 240), white));
+    .middle-cards(linear-gradient(rgb(224, 184, 228), white));
+    box-shadow: 2px 5px 20px;
+    color:rgb(207, 149, 240);
     h2{
-        .headings();    
+        .headings(); 
+        color: black;   
     }
     .education{
         .card-info();
         
         .edu{
             .each-card();
-            .colormix1();
+            // .colormix1();
             h4 {
                 .sub-headings();
                 color:black
