--- a/less/experience.less
+++ b/less/experience.less
@@ -1,14 +1,17 @@
 //experience
 .experience-section{
-    .middle-cards(linear-gradient(white, rgb(231, 134, 240))); 
+    .middle-cards(linear-gradient(white, rgb(224, 184, 228))); 
+    box-shadow: 2px 5px 20px;
+    color: #b7a8c0;
     h2{
         .headings();
+        color:black;
     }
     .experience{
         .card-info();
         .exper{
             .each-card();
-            .colormix1();
+            // .colormix1();
             h4 {
                 .sub-headings();
                 color:black
