--- a/less/header.less
+++ b/less/header.less
@@ -6,7 +6,7 @@
 
 //header
 .header {
-    background-image: linear-gradient(white, rgb(231, 134, 240));
+    .bg();
     display: flex;
     justify-content: space-between
     
@@ -55,7 +55,7 @@ a {
     text-decoration: none;
     display: flex;
     font-size: 3rem;
-    padding: 9.8px 0;
+    padding: 9.7px 0;
     span {
         color: black;
     }
