--- a/less/skills.less
+++ b/less/skills.less
@@ -1,9 +1,7 @@
 //skills
 
 .skills-section{
-    background-image: linear-gradient(rgb(231, 134, 240), white);
-    box-shadow: 2px 5px 20px;
-    color: #BC58F4;
+    .colormix2();
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -16,7 +14,7 @@
         .centerflex();
         width: 100%;
         .box {
-            .colormix1();
+            // .colormix1();
             width: 40%;
             display: flex;
             flex-direction: column;
