--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,8 +1,19 @@
 .colormix1() {
-    background-image: linear-gradient(white, rgb(231, 134, 240));
+    background-image: linear-gradient(white, rgb(224, 184, 228));
     box-shadow: 2px 5px 20px;
-    color: #BC58F4;
+    color: rgb(207, 149, 240);
 }
+
+.colormix2() {
+    background-image: linear-gradient(rgb(224, 184, 228), white);
+    box-shadow: 2px 5px 20px;
+    color: rgb(207, 149, 240);
+}
+
+.bg(){
+    background-image: linear-gradient(white, rgb(224, 184, 228));
+}
+
 
 .centerflex(){
     justify-content: center;
