--- a/less/container.less
+++ b/less/container.less
@@ -5,4 +5,12 @@
     box-shadow: 2px 5px 20px;
     color: rgb(230, 235, 162);
     margin-top: 30px;
+    .all {
+        height: 400px;
+        color: black;
+        h2{ 
+            padding-top:10px;
+        }
+    
+    }
 }
