--- a/less/education.less
+++ b/less/education.less
@@ -2,24 +2,45 @@
 .education-section{
     .middle-cards(linear-gradient(rgb(224, 184, 228), white));
     box-shadow: 2px 5px 20px;
-    color:rgb(207, 149, 240);
+    color:black;
     h2{
         .headings(); 
         color: black;   
     }
     .education{
         .card-info();
-        
+        padding-top: 15px;
+        width: 95%;
         .edu{
             .each-card();
+            padding-top: 15px;
+            height: 90%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             // .colormix1();
+            box-shadow: 2px 5px 20px;
+            color: #b7a8c0;
             h4 {
-                .sub-headings();
-                color:black
+                font-size: 2rem;
+                color:black;
+                font-weight: bold;
+                
             }
-            p {
-                color:black
-
+            h3 {
+                font-size: 1.4rem;
+                font-weight: 550;
+                color:black;
+                padding: 5px 0 10px 0;
+            }
+            ul{
+                width: 80%;
+               color:black;
+               li{
+                   font-size:1.2rem;
+                padding-bottom: 5px;
+                list-style-type: circle;
+               }
             }
         }
     
