--- a/less/header.less
+++ b/less/header.less
@@ -1,16 +1,10 @@
-.all {
-    height: 350px;
-    color: black;
 
-}
 
 //header
 .header {
     .bg();
     display: flex;
-    justify-content: space-between
-    
-    
+    justify-content: space-between;
 }
 
 .header-info {
@@ -55,7 +49,7 @@ a {
     text-decoration: none;
     display: flex;
     font-size: 3rem;
-    padding: 9.7px 0;
+    padding: 13px 0;
     span {
         color: black;
     }
@@ -74,8 +68,3 @@ a {
 
 
 
-//Footer
-
-footer {
-    background-color: red;
-}
