--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,13 +1,13 @@
 .colormix1() {
     background-image: linear-gradient(white, rgb(224, 184, 228));
     box-shadow: 2px 5px 20px;
-    color: rgb(207, 149, 240);
+    color: black;
 }
 
 .colormix2() {
     background-image: linear-gradient(rgb(224, 184, 228), white);
     box-shadow: 2px 5px 20px;
-    color: rgb(207, 149, 240);
+    color:black ;
 }
 
 .bg(){
@@ -19,12 +19,6 @@
     justify-content: center;
     align-items: center;
 }
-
-
-
-
-
-
 .middle-cards(@bgcolor) {
     background-image: @bgcolor;
     display:flex;
