--- a/less/skills.less
+++ b/less/skills.less
@@ -14,18 +14,25 @@
         .centerflex();
         width: 100%;
         .box {
-            // .colormix1();
+            // border: 5px solid green;
+            margin: 5px;
             width: 40%;
             display: flex;
             flex-direction: column;
             .centerflex();
             h3 {
-                font-size: 3rem;
+                font-size: 2rem;
+                font-weight: bolder;
                 color: black;
             }
             ul li {
-                font-size: 2rem;
+                font-size: 1.3rem;
                 color: black;
+                display: flex;
+                flex-direction: column;
+                justify-content: left;
+                padding: 3px 0;
+                
             }
             
         }
@@ -34,3 +41,34 @@
     }
 
  }
+
+ .soft-skills {
+    width: 85%;
+    padding-top: 30px;
+    h3{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: black;
+        font-size: 2rem;
+        font-weight: bolder;
+    }
+    
+ .last-box {
+     display: flex;
+    justify-content: space-between;
+    
+     
+     ul{
+         display:flex;
+         flex-direction: column;
+     }
+     li {
+         font-size: 1.3rem;
+         color: black;
+         padding: 5px 0;
+         
+         
+     }
+ }
+}
