--- a/less/container.less
+++ b/less/container.less
@@ -1,3 +1,28 @@
+// .conatiner{
+//     @media @largeDesktop {
+//         font-family: 'Libre Baskerville', serif;
+//         max-width: 75%;
+//         margin:0 auto;
+//         box-shadow: 2px 5px 20px;
+//         color: rgb(230, 235, 162);
+//         margin-top: 30px;
+//     }
+    
+//     @media @smallPhone {
+//         width: 100%;
+//         margin: 0 auto;
+//     }
+//     .all {
+        
+//         height: 400px;
+//         color: black;
+//         h2{ 
+//             padding-top:10px;
+//         }
+    
+//     }
+// }
+
 .conatiner{
     font-family: 'Libre Baskerville', serif;
     max-width: 75%;
@@ -14,3 +39,4 @@
     
     }
 }
+
