--- a/less/index.less
+++ b/less/index.less
@@ -1,5 +1,11 @@
+//Vars and Mixins
+@import 'variables';
 @import 'mixins';
 
+//Resets and general styles
+
+
+//Components
 @import 'container';
 @import 'header';
 @import 'skills';
