--- a/less/experience.less
+++ b/less/experience.less
@@ -4,12 +4,16 @@
     box-shadow: 2px 5px 20px;
     color: black;
     h2{
-        .headings();
+        margin-top:28px;
         color:black;
+        font-size: 3rem;
+        font-weight: bolder;
     }
     .experience{
-        .each-card();
-        .card-info();
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         .exper{
             width:50%;
             display: flex;
@@ -18,12 +22,12 @@
             padding-top: 15px;
             // .colormix1();
             h4 {
-                font-size: 2rem;
+                font-size: 1.1rem;
                 color:black;
                 font-weight: bold;
             }
             h3 {
-                font-size: 1.4rem;
+                font-size: .9rem;
                 font-weight: 550;
                 color:black;
                 padding: 5px 0 10px 0;
@@ -32,10 +36,9 @@
                 color:black
             }
             ul{
-                width: 30%;
+                width: 100%;
                color:black;
                li{
-                   font-size:1.2rem;
                 padding-bottom: 5px;
                 list-style-type: circle;
                }
