--- a/less/education.less
+++ b/less/education.less
@@ -4,13 +4,16 @@
     box-shadow: 2px 5px 20px;
     color:black;
     h2{
-        .headings(); 
-        color: black;   
+        margin-top:28px;
+        color:black;
+        font-size: 3rem;
+        font-weight: bolder;
     }
     .education{
-        .card-info();
-        padding-top: 15px;
-        width: 95%;
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         .edu{
             .each-card();
             padding-top: 15px;
@@ -21,14 +24,15 @@
             // .colormix1();
             box-shadow: 2px 5px 20px;
             color: #b7a8c0;
+            
             h4 {
-                font-size: 2rem;
+                font-size: 1.1rem;
                 color:black;
                 font-weight: bold;
                 
             }
             h3 {
-                font-size: 1.4rem;
+                font-size: .9rem;
                 font-weight: 550;
                 color:black;
                 padding: 5px 0 10px 0;
@@ -37,7 +41,7 @@
                 width: 80%;
                color:black;
                li{
-                   font-size:1.2rem;
+                //    font-size: .5rem;
                 padding-bottom: 5px;
                 list-style-type: circle;
                }
@@ -46,3 +50,4 @@
     
     }
 }
+
