--- a/less/header.less
+++ b/less/header.less
@@ -2,92 +2,78 @@
 //header
 .header {
     .bg();
-    .mob-nav {
-        background-color: green;
-        max-width: 95%;
-        nav a{
-    .colormix1();
-    .centerflex();
-    text-decoration: none;
-
-    font-size: 1rem;
-    padding: 3px 0;
-    span {
-        color: black;  
+    .header-info {
+        display: flex;
+        flex-direction: column;
+        .centerflex();
+        width: 100%;
+        padding: 15px;
+        h1 {
+        font-size: 4rem;
+        display: flex;
+        
+        }
+        .sp {
+         max-width: 30%;
+         padding: 20px 0;
+       
+        }
+        p{
+        margin-left: 10px;
+        font-size: 1.4rem;
         }
     }
-    //  max-width:100%;  
-    //  flex-direction: column;    
-        
-    // @media @largeDesktop {
-    //     display: flex;
-    //     justify-content: space-between;
-    // }
-   
-}
-
-.header-info {
-    display: flex;
-    flex-direction: column;
-    .centerflex();
-    width: 100%;
-    padding: 15px;
-h1 {
-    font-size: 4rem;
-    display: flex;
-    
-}
-// span {
-//     font-size: 1.5rem;
-//     justify-content: center;
-//     align-items: center;
-//     padding-bottom: 10px;
-    
-// }
-.sp {
-     max-width: 30%;
-     padding: 20px 0;
-   
-}
-p{
-    margin-left: 10px;
-    font-size: 1.4rem;
-}
-}
-
-
-.mypic{
-    
-//     width:30%;
-//     margin-left: 180px;
-    img {
-    display:none;
-//         
-//         margin-top: 40px;
-       
+    .mypic{
+        img {
+        display:none;  
+        }
     }
+    .nav {
+            display:none;
+    }
+    
+     
+    .mob-nav a span:hover {
+        color: #BC58F4;
+    }
+    
+    .mob-nav {
+        display:flex;
+        overflow: hidden;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        nav {
+            a{
+             .colormix1();
+             .centerflex();
+             text-decoration: none;
+             font-size: 1rem;
+             padding: 3px 23.2px;
+            }
+
+        }
+   
+}
 }
 
-.nav {
-//     width: 15%;
-        display:none;
-// a {
-//     .colormix1();
-//     display: flex;
-//     .centerflex();
-//     text-decoration: none;
-//     display: flex;
-//     font-size: 3rem;
-//     padding: 13px 0;
-//     span {
-//         color: black;
-//     }
-}
-// }
- 
-// .nav a span:hover {
-//     color: #BC58F4;
-// }
+
+  
+  .mob-nav a {
+    float: left;
+    display: block;
+    text-align: center;
+    // padding: 14px 16px;
+    // text-decoration: none;
+    // font-size: 17px;
+  }
+  
+  .info-container {
+    padding: 16px;
+    // margin-top: 30px;
+  }
+
+
 
 //Large Desktop
 
@@ -342,4 +328,3 @@ p{
 //     color: #BC58F4;
 // }
 // }
-}
