--- a/less/skills.less
+++ b/less/skills.less
@@ -2,34 +2,73 @@
 
 .skills-section{
     .colormix2();
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    
+    h2 {
+        margin-top:28px;
+        font-size: 3rem;
+        font-weight: bolder;
+        color: black;
+    }
+    .skills {
+        display: flex;
+        .centerflex();
+        width: 100%;
+        .box {
+        // border: 5px solid green;
+        margin: 5px;
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        .centerflex();
+        h3 {
+            font-size: 1.3rem;
+            font-weight: bolder;
+            color: black;
+            padding-bottom: 10px;
+        }
+        ul li {
+            font-size: 1rem;
+            color: black;
+            display: flex;
+            flex-direction: column;
+            justify-content: left;
+            padding: 4px 0;
+            
+            
+        }
+        
+    }
+    
+    
+}
+}
   
- }
+ 
 
  .soft-skills {
-    width: 85%;
-    padding-top: 30px;
+    width: 100%;
+    padding-top: 5px;
     h3{
         display: flex;
         justify-content: center;
         align-items: center;
         color: black;
-        font-size: 2rem;
+        font-size: 1.3rem;
         font-weight: bolder;
     }
     
  .last-box {
      display: flex;
-    justify-content: space-between;
-    
-     
-     ul{
-         display:flex;
-         flex-direction: column;
-     }
+     flex-direction: column;
      li {
-         font-size: 1.3rem;
+        display: flex;
+        justify-content: center;
+         font-size: 1rem;
          color: black;
-         padding: 5px 0;
+         padding: 4px 0;
          
          
      }
